--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Exo', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to right,#7f5a83 0%, #0d324d 74%);
+  
+}
+
+button {
+  cursor: pointer;
 }
 
 code {
